--- a/ShowingGoodMovies/Info.plist
+++ b/ShowingGoodMovies/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>MovieDB_ApiKey</key>
-	<string>2696829a81b1b5827d515ff121700838&amp;</string>
+	<string>2696829a81b1b5827d515ff121700838</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
